# d100final

./: .flake8  README.md  environment.yml  pyproject.toml
src/analysis/: eda_cleaning.ipynb  model_training_income.py
src/project/data/: _sample_split.py  marketing_campaign_cleaned.parquet  plotting.py  preprocessing.py
src/project/evaluation/: _evaluate_predictions.py
src/project/feature_enginnering/: feature_engineering.py
src/test/: test_polynomial.py
