[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']

[project]
name = "final_project"
version = "0.1.0"
description = "A final project for income prediction models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy<2",
    "dask-ml",
    "ydata-profiling",
    "matplotlib",
    "glum",
    "lightgbm",
    "scikit-learn",
    "dalex",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=6",
    "pytest-cov",
    "setuptools-scm",
    "ipykernel",
    "nbformat",
]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["project*", "src*", "analysis*"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "d100_final_project"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = '3.12'
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.docformatter]
pre-summary-newline = true
recursive = true
wrap-descriptions = 88
wrap-summaries = 88

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=d100_final_project"
pythonpath = "."

[tool.coverage.run]
source = ["project", "analysis", "src"]
branch = true

[tool.coverage.report]
show_missing = true
